Fix bugs with client